--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="app"></div>
     <script>
       window.$docsify = {
-        name: "",
+        name: "FE-knowledge",
         repo: "",
         loadSidebar: true,
         routerMode: "history",
