test: basePath test

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         routerMode: "history",
         subMaxLevel: 2,
         auto2top: true,
+        basePath: "https://xiaozhang119.github.io/FE-knowledge/",
         alias: {
           "/.*/_sidebar.md": "/_sidebar.md",
         },
