--- a/index.html
+++ b/index.html
@@ -19,24 +19,14 @@
     <script>
       window.$docsify = {
         name: "FE-knowledge",
-        repo: "",
+        repo: "https://github.com/xiaozhang119/FE-knowledge",
+        noEmoji: true,
         loadSidebar: true,
         subMaxLevel: 2,
         auto2top: true,
         alias: {
           "/.*/_sidebar.md": "/_sidebar.md",
         },
-        plugins: [
-          function (hook, vm) {
-            console.log(hook, vm);
-            hook.beforeEach(function (content) {
-              // Invoked each time before parsing the Markdown file.
-              // ...
-              console.log(content);
-              return content;
-            });
-          },
-        ],
       };
     </script>
     <!-- Docsify v4 -->
