--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
   <body>
     <div id="app"></div>
     <script>
+      console.log(`                                                                                               
+    8 888888888o.    8 8888888888       ,o888888o. 8888888 8888888888 ,o888888o.     8 888888888o.   
+    8 8888    \`88.  8 8888            8888     \`88.     8 8888    . 8888     \`88.   8 8888    \`88.  
+    8 8888     \`88  8 8888         ,8 8888       \`8.    8 8888   ,8 8888       \`8b  8 8888     \`88  
+    8 8888     ,88   8 8888         88 8888               8 8888   88 8888        \`8b 8 8888     ,88  
+    8 8888.   ,88'   8 888888888888 88 8888               8 8888   88 8888         88  8 8888.   ,88'  
+    8 888888888P'    8 8888         88 8888               8 8888   88 8888         88  8 888888888P'   
+    8 8888\`8b       8 8888         88 8888               8 8888   88 8888        ,8P  8 8888\`8b       
+    8 8888 \`8b.     8 8888         \`8 8888       .8'    8 8888   \`8 8888       ,8P  8 8888 \`8b.     
+    8 8888   \`8b.   8 8888            8888     ,88'      8 8888    \` 8888     ,88'   8 8888   \`8b.   
+    8 8888     \`88. 8 888888888888     \`8888888P'       8 8888       \`8888888P'     8 8888     \`88. 
+    `)
+    </script>
+    <script>
       window.$docsify = {
         name: "FE-knowledge",
         repo: "https://github.com/xiaozhang119/FE-knowledge",
